--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "lib/server.js",
   "jspm": {
     "main": "browser/lib/browser.js",
-    "lib": "browser/"
+    "directories": {
+      "lib": "browser"
+    }
   },
   "scripts": {
     "test": "make test",
