--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "2.0.1",
   "description": "Render in react with context and layout",
   "main": "lib/server.js",
+  "browser": "browser/lib/browser.js",
   "jspm": {
     "main": "lib/browser.js",
     "directories": {
       "lib": "browser"
     }
+  },
+  "webpack": {
+    "./lib/App.js": "./browser/lib/App.js"
   },
   "scripts": {
     "test": "make test",
