--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
   },
   "homepage": "https://github.com/turacojs/fody#readme",
   "devDependencies": {
-    "eslint": "^1.10.3",
-    "springbokjs-library": "^15.0.0"
+    "eslint": "^2.7.0",
+    "eslint-config-pob": "^5.0.0",
+    "springbokjs-library": "^17.0.0"
   },
   "dependencies": {
-    "fody-app": "^1.0.0",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "fody-app": "^2.0.0",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1"
   }
 }
