fix react-hot-loader import

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   ],
   "author": "Christophe Hurpeau <christophe@hurpeau.com> (http://christophe.hurpeau.com/)",
   "license": "ISC",
-  "repository": "turacojs/fody",
+  "repository": "git@github.com:turacojs/fody.git",
   "homepage": "https://github.com/turacojs/fody#readme",
   "bugs": {
     "url": "https://github.com/turacojs/fody/issues"
@@ -21,8 +21,8 @@
     "build": "pob-build",
     "build:dev": "pob-build",
     "clean": "rm -Rf docs dist test/node6 coverage",
-    "lint": "eslint --ext .js,.jsx --fix -c .eslintrc.yml src/",
-    "prepublish": "ln -s ../../git-hooks/pre-commit .git/hooks/pre-commit || echo",
+    "lint": "eslint --ext .js,.jsx --fix src/",
+    "prepublish": "ln -s ../../git-hooks/pre-commit .git/hooks/pre-commit 2>/dev/null || true ; ln -s ../../git-hooks/post-merge .git/hooks/post-merge 2>/dev/null || true",
     "preversion": "npm run lint && npm run build && pob-repository-check-clean",
     "release": "pob-repository-check-clean && pob-release",
     "version": "pob-version",
@@ -43,12 +43,12 @@
     "babel-preset-stage-1": "^6.13.0",
     "eslint": "^3.3.1",
     "eslint-config-airbnb": "^10.0.1",
-    "eslint-config-pob": "^6.1.6",
+    "eslint-config-pob": "^7.0.0",
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-import": "^1.13.0",
     "eslint-plugin-jsx-a11y": "^2.1.0",
-    "eslint-plugin-react": "^6.1.1",
-    "pob-babel": "^7.1.2",
+    "eslint-plugin-react": "^6.1.2",
+    "pob-babel": "^7.2.0",
     "pob-release": "^2.1.0",
     "react": "^15.3.0"
   },
