--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fody",
-  "version": "5.1.4",
+  "version": "6.0.0-beta.1",
   "description": "Render in react with context and layout",
   "keywords": [
     "react"
