--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "main": "index.js",
   "webpack:main": "./lib-webpack/browser.js",
   "webpack:main-dev": "./lib-webpack-dev/browser.js",
+  "webpack:node": "./lib-node6/index.js",
+  "webpack:node-dev": "./lib-node6-dev/index.js",
   "webpack:main-modern-browsers": "./lib-webpack-modern-browsers/browser.js",
   "webpack:main-modern-browsers-dev": "./lib-webpack-modern-browsers-dev/browser.js",
   "scripts": {
@@ -37,21 +39,21 @@
   "devDependencies": {
     "babel-eslint": "^7.1.0",
     "babel-preset-es2015": "^6.18.0",
-    "babel-preset-es2015-node6": "^0.3.0",
-    "babel-preset-modern-browsers": "^6.0.0",
+    "babel-preset-es2015-node6": "^0.4.0",
+    "babel-preset-modern-browsers": "^7.0.0",
     "babel-preset-react": "^6.16.0",
-    "eslint": "^3.9.0",
-    "eslint-config-airbnb": "^12.0.0",
-    "eslint-config-pob": "^9.0.1",
-    "eslint-plugin-babel": "^3.3.0",
+    "eslint": "^3.12.2",
+    "eslint-config-airbnb": "^14.0.0",
+    "eslint-config-pob": "^10.0.1",
+    "eslint-plugin-babel": "^4.0.0",
     "eslint-plugin-flowtype": "^2.25.0",
-    "eslint-plugin-import": "^1.16.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.4.1",
-    "komet": "^0.1.3",
+    "komet": "^0.1.4",
     "komet-karma": "^0.2.3",
-    "pob-babel": "^12.5.5",
-    "pob-release": "^2.2.2",
+    "pob-babel": "^12.9.0",
+    "pob-release": "^3.0.0",
     "react": "^15.3.2",
     "tcomb-forked": "^3.4.0"
   },
